--- a/head.html
+++ b/head.html
@@ -6,5 +6,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <script nonce="aem" src="/scripts/aem.js" type="module"></script>
 <script nonce="aem" src="/scripts/scripts.js" type="module"></script>
-<script src="/scripts/splide.js"></script>
-<link rel="stylesheet" href="/styles/splide.css">
+<!-- <script src="/scripts/splide.js"></script>
+<link rel="stylesheet" href="/styles/splide.css"> -->
